--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,10 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  background: url('/images/congress_chairs.jpeg') no-repeat center center fixed;
+  /* background: url('/images/congress_chairs.jpeg') no-repeat center center fixed;
+   */
   background-size: cover;
+  height: 100vh;
 }
 
 .App-header {
