--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,20 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  /* background: url('/images/congress_chairs.jpeg') no-repeat center center fixed;
-   */
+  /* background: url('/images/congress_chairs.jpeg') no-repeat center center fixed; */
+  background: url('/images/capitol.jpeg') no-repeat center center fixed;
+
+  
   background-size: cover;
-  height: 100vh;
+  height: 100%;
+  background: linear-gradient(to right, rgba(255, 255, 255, .5), rgba(255, 255, 255, 0.5)), url('/images/capitol.jpeg') no-repeat center center fixed;
+
+  /* background: linear-gradient(to right, rgba(0, 0, 0, 1.0), rgba(0, 0, 0, 0.2)), url('/images/congress_chairs.jpeg') no-repeat center center fixed; */
+  /* background: linear-gradient(to right, rgba(255, 255, 255, .4), rgba(255, 255, 255, 0.4)), url('/images/congress_chairs.jpeg') no-repeat center center fixed; */
+
+  
+  /* background: rgba(255,255,255,0.5); */
+  /* filter: grayscale(100%); */
 }
 
 .App-header {
